--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 # testing
 /coverage
 
+# css, since using scss
+src/**/*.css
+
 # production
 /build
 
@@ -16,3 +19,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+src/components/todo/styles.css
