Added pagination. Updating the API to match the one from apiary. Better documentation with comments and proptypes. Updated Installation instructions. Removed unneeded style files.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 # css, since using scss
 /src/**/*.css
 
+# IDE project files
+/.idea
+
 # production
 /build
 
@@ -18,5 +21,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-src/components/todo/styles.css
